samples/_failures_safe/1761337162_e3d16f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76fde371.c: In function ‘main’:
./samples/SAFE/__tmp_76fde371.c:144:13: error: expected declaration or statement at end of input
  144 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_76fde371.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76fde371.c:144:13: error: expected declaration or statement at end of input
